--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.0.5",
     "dirty-chai": "^1.2.2",
-    "draft-js-plugins-editor": "^2.0.0-beta1",
+    "draft-js-plugins-editor": "^2.0.0-beta5",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -74,7 +74,10 @@
   "dependencies": {
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.9.1",
+    "draft-js-checkable-list-item": "^2.0.2",
+    "draftjs-utils": "^0.3.2",
     "find-with-regex": "^1.0.2",
+    "marked": "^0.3.6",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
