--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "clean": "node_modules/.bin/rimraf lib",
     "build": "npm run clean && npm run build:js",
     "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
+    "build:demo": "NODE_ENV=production webpack --config demo/webpack.config.prod.js && rm -rf demo/public/css && cp -R demo/publicTemplate/* demo/public/",
     "prepublish": "npm run build",
     "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
     "start": "npm run start:dev",
@@ -62,9 +63,8 @@
     "postcss-loader": "^1.1.1",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
-    "react-router": "^2.4.0",
-    "react-static-webpack-plugin": "^1.3.0",
     "rimraf": "^2.5.4",
+    "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
@@ -72,6 +72,7 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "dependencies": {
+    "draft-js-prism": "^1.0.3",
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.9.1",
     "draft-js-checkable-list-item": "^2.0.2",
