--- a/package.json
+++ b/package.json
@@ -73,10 +73,11 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "dependencies": {
-    "draft-js-prism": "^1.0.3",
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.9.1",
     "draft-js-checkable-list-item": "^2.0.2",
+    "draft-js-prism": "^1.0.3",
+    "prismjs": "^1.6.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
