--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.0.5",
     "dirty-chai": "^1.2.2",
-    "draft-js-plugins-editor": "^2.0.0-beta5",
+    "draft-js-plugins-editor": "2.0.0-beta7",
+    "draft-js-prism": "^1.0.3",
     "enzyme": "^2.6.0",
     "eslint": "^3.11.1",
     "eslint-config-airbnb": "^13.0.0",
@@ -62,6 +63,7 @@
     "jsdom": "^9.8.3",
     "mocha": "^3.2.0",
     "postcss-loader": "^1.1.1",
+    "prismjs": "^1.6.0",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "rimraf": "^2.5.4",
@@ -72,12 +74,13 @@
     "webpack-dev-middleware": "^1.8.4",
     "webpack-hot-middleware": "^2.13.2"
   },
+  "peerDependencies": {
+    "draft-js-plugins-editor": "2.0.0-beta7"
+  },
   "dependencies": {
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.9.1",
     "draft-js-checkable-list-item": "^2.0.2",
-    "draft-js-prism": "^1.0.3",
-    "prismjs": "^1.6.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
