--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "prismjs": "^1.6.0",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
+    "react-github-fork-ribbon": "^0.4.4",
     "rimraf": "^2.5.4",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
