--- a/package.json
+++ b/package.json
@@ -78,6 +78,9 @@
   "peerDependencies": {
     "draft-js-plugins-editor": "2.0.0-beta7"
   },
+  "contributors": [
+    "Atsushi Nagase <a@ngs.io>"
+  ],
   "dependencies": {
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "^0.9.1",
