--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,7 @@
 machine:
   timezone: UTC
+  node:
+    version: 4.2.6
   pre:
     - "git config --global user.name 'Circle CI'"
     - "git config --global user.email 'a+circleci@ngs.io'"
