--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
     "start": "npm run start:dev",
     "deploy:demo": "COMMIT=$(git rev-parse --short HEAD) && BRANCH=gh-pages && GIT_URL=$(git remote get-url origin) && DIR=.deploy; rm -rf $DIR; (git clone $GIT_URL -b $BRANCH $DIR || (git init $DIR && cd $DIR && git remote add origin $GIT_URL && git checkout -b $BRANCH)) && rm -rf ${DIR}/* && cp -R ${DIR}/../demo/public/* $DIR && cd $DIR && git add -A && git commit -m \"Built artifacts of ${COMMIT} [ci skip]\" && git push origin $BRANCH",
-    "test": "mocha --compilers js:babel-core/register --require testHelper.js **/__test__/*.js"
+    "test": "mocha --compilers js:babel-core/register --recursive --require testHelper.js src/**/__test__/*.js"
   },
   "repository": {
     "type": "git",
@@ -68,6 +68,8 @@
     "react-addons-test-utils": "^15.4.1",
     "react-github-fork-ribbon": "^0.4.4",
     "rimraf": "^2.5.4",
+    "sinon": "^1.17.6",
+    "sinon-chai": "^2.8.0",
     "static-site-generator-webpack-plugin": "^3.1.0",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
