--- a/package.json
+++ b/package.json
@@ -4,18 +4,26 @@
   "description": "A DraftJS plugin for supporting Markdown syntax shortcuts",
   "main": "lib/index.js",
   "scripts": {
-    "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
     "build": "npm run clean && npm run build:js",
-    "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
     "build:demo": "NODE_ENV=production webpack --config demo/webpack.config.prod.js && rm -rf demo/public/css && cp -R demo/publicTemplate/* demo/public/",
-    "prepublish": "npm run build",
-    "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
-    "start": "npm run start:dev",
+    "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
+    "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
     "deploy:demo": "COMMIT=$(git rev-parse --short HEAD) && BRANCH=gh-pages && GIT_URL=$(git remote get-url origin) && DIR=.deploy; rm -rf $DIR; (git clone $GIT_URL -b $BRANCH $DIR || (git init $DIR && cd $DIR && git remote add origin $GIT_URL && git checkout -b $BRANCH)) && rm -rf ${DIR}/* && cp -R ${DIR}/../demo/public/* $DIR && cd $DIR && git add -A && git commit -m \"Built artifacts of ${COMMIT} [ci skip]\" && git push origin $BRANCH",
-    "test:mocha": "mocha --opts .mocha.opts $(find src -name '*-test.js')",
-    "test:watch": "npm run test:mocha -- --watch",
+    "prepublish": "npm run build",
+    "start": "npm run start:dev",
+    "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
+    "test": "npm run test:coverage",
     "test:coverage": "node_modules/.bin/nyc --require babel-core/register npm run test:mocha",
-    "test": "npm run test:coverage"
+    "test:mocha": "mocha --opts .mocha.opts $(find src -name '*-test.js')",
+    "test:watch": "npm test | npm run watch",
+    "watch": "npm-watch"
+  },
+  "watch": {
+    "test": {
+      "patterns": [
+        "src/**/*.js"
+      ]
+    }
   },
   "repository": {
     "type": "git",
@@ -67,6 +75,7 @@
     "mocha": "^3.2.0",
     "mocha-junit-reporter": "^1.12.1",
     "mocha-multi-reporters": "^1.1.1",
+    "npm-watch": "^0.1.6",
     "nyc": "^10.0.0",
     "postcss-loader": "^1.1.1",
     "prismjs": "^1.6.0",
