--- a/circle.yml
+++ b/circle.yml
@@ -11,6 +11,7 @@ general:
       - gh-pages
 test:
   post:
+    - cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
     - cp -R lib $CIRCLE_ARTIFACTS/
     - cp -R coverage $CIRCLE_ARTIFACTS/
     - mkdir -p $CIRCLE_TEST_REPORTS/nyc && cp test-results.xml $CIRCLE_TEST_REPORTS/nyc
