--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "css-loader": "^0.26.0",
     "css-modules-require-hook": "^4.0.5",
     "dirty-chai": "^1.2.2",
+    "draft-js-code": "^0.2.0",
     "draft-js-plugins-editor": "2.0.0-beta7",
     "draft-js-prism": "ngs/draft-js-prism#6edb31c3805dd1de3fb897cc27fced6bac1bafbb",
     "enzyme": "^2.6.0",
