--- a/.eslintrc
+++ b/.eslintrc
@@ -19,8 +19,6 @@
     "import/no-extraneous-dependencies": 0,
     "import/prefer-default-export": 0,
     "jsx-a11y/no-static-element-interactions": 0,
-    "class-methods-use-this": 0,
-    "no-plusplus":0,
-    "no-underscore-dangle":0
+    "class-methods-use-this": 0
   }
 }
