Use tilda peer dependency versioning

--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "peerDependencies": {
-    "draft-js-plugins-editor": "2.0.0-rc2",
+    "draft-js-plugins-editor": "~2.0.0-rc2",
     "react": "^15.0.0",
     "react-dom": "^15.0.0"
   },
