--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "decorate-component-with-props": "^1.0.2",
     "draft-js": "~0.10.1",
     "draft-js-checkable-list-item": "^2.0.5",
+    "draft-js-prism-plugin": "^0.1.1",
     "immutable": "~3.7.4"
   }
 }
