--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "draft-js-markdown-shortcuts-plugin",
-  "version": "0.3.0",
-  "description": "A DraftJS plugin for supporting Markdown syntax shortcuts",
+  "name": "draft-js-markdown-plugin",
+  "version": "0.0.1",
+  "description": "A DraftJS plugin for supporting Markdown syntax shortcuts, fork of draft-js-markdown-shortcuts-plugin",
   "main": "lib/index.js",
   "scripts": {
     "eslint": "node_modules/.bin/eslint .",
@@ -28,7 +28,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ngs/draft-js-markdown-shortcuts-plugin.git"
+    "url": "git+https://github.com/withspectrum/draft-js-markdown-plugin.git"
   },
   "keywords": [
     "draftjs",
@@ -36,12 +36,12 @@
     "plugin",
     "markdown"
   ],
-  "author": "Atsushi Nagase",
+  "author": "Max Stoiber <contact@mxstbr.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ngs/draft-js-markdown-shortcuts-plugin/issues"
+    "url": "https://github.com/withspectrum/draft-js-markdown-plugin/issues"
   },
-  "homepage": "https://github.com/ngs/draft-js-markdown-shortcuts-plugin#readme",
+  "homepage": "https://github.com/withspectrum/draft-js-markdown-plugin#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.3",
     "babel-cli": "^6.18.0",
