--- a/package.json
+++ b/package.json
@@ -4,27 +4,12 @@
   "description": "A DraftJS plugin for supporting Markdown syntax shortcuts, fork of draft-js-markdown-shortcuts-plugin",
   "main": "lib/index.js",
   "scripts": {
-    "eslint": "node_modules/.bin/eslint .",
     "build": "npm run clean && npm run build:js",
     "build:demo": "NODE_ENV=production webpack --config demo/webpack.config.prod.js && rm -rf demo/public/css && cp -R demo/publicTemplate/* demo/public/",
     "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
     "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
-    "deploy:demo": "COMMIT=$(git rev-parse --short HEAD) && BRANCH=gh-pages && GIT_URL=$(git remote get-url origin) && DIR=.deploy; rm -rf $DIR; (git clone $GIT_URL -b $BRANCH $DIR || (git init $DIR && cd $DIR && git remote add origin $GIT_URL && git checkout -b $BRANCH)) && rm -rf ${DIR}/* && cp -R ${DIR}/../demo/public/* $DIR && cd $DIR && git add -A && git commit -m \"Built artifacts of ${COMMIT} [ci skip]\" && git push origin $BRANCH",
-    "prepublish": "npm run build",
-    "start": "npm run start:dev",
-    "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
-    "test": "npm run test:coverage",
-    "test:coverage": "node_modules/.bin/nyc --require babel-core/register npm run test:mocha",
-    "test:mocha": "mocha --opts .mocha.opts $(find src -name '*-test.js')",
-    "test:watch": "npm test | npm run watch",
-    "watch": "npm-watch"
-  },
-  "watch": {
-    "test": {
-      "patterns": [
-        "src/**/*.js"
-      ]
-    }
+    "dev": "node_modules/.bin/babel-node ./demo/server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -111,6 +96,7 @@
     "draft-js": "~0.10.1",
     "draft-js-checkable-list-item": "^2.0.5",
     "draft-js-prism-plugin": "^0.1.1",
-    "immutable": "~3.7.4"
+    "immutable": "~3.7.4",
+    "jest": "^21.1.0"
   }
 }
