--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
     "react-dom": "^15.4.1",
+    "react-github-corner": "^2.0.0",
     "react-github-fork-ribbon": "^0.4.4",
     "rimraf": "^2.5.4",
     "sinon": "^1.17.6",
