--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.2"
+    "webpack-hot-middleware": "^2.13.2",
+    "jest": "^21.1.0",
+    "react-test-renderer": "^16.2.0"
   },
   "peerDependencies": {
     "draft-js-plugins-editor":
@@ -99,8 +101,6 @@
     "draft-js": "~0.10.1",
     "draft-js-checkable-list-item": "^2.0.5",
     "draft-js-prism-plugin": "^0.1.1",
-    "immutable": "~3.7.4",
-    "jest": "^21.1.0",
-    "react-test-renderer": "^16.2.0"
+    "immutable": "~3.7.4"
   }
 }
