--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
     "dev": "node_modules/.bin/babel-node ./demo/server.js",
     "test": "jest",
-    "precommit": "lint-staged"
+    "precommit": "jest && lint-staged"
   },
   "repository": {
     "type": "git",
