--- a/package.json
+++ b/package.json
@@ -76,10 +76,10 @@
     "postcss-loader": "^1.1.1",
     "prettier": "^1.7.0",
     "prismjs": "^1.6.0",
-    "react": "^15.4.1",
+    "react": "16.2.x",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
-    "react-dom": "^15.4.1",
+    "react-dom": "16.2.0",
     "react-github-corner": "^2.0.0",
     "react-github-fork-ribbon": "^0.4.4",
     "react-test-renderer": "^16.2.0",
