--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "postcss-loader": "^1.1.1",
     "prettier": "^1.7.0",
     "prismjs": "^1.6.0",
+    "raf": "^3.4.0",
     "react": "16.2.x",
     "react-addons-pure-render-mixin": "^15.4.1",
     "react-addons-test-utils": "^15.4.1",
