--- a/package.json
+++ b/package.json
@@ -1,23 +1,20 @@
 {
   "name": "draft-js-markdown-shortcuts-plugin",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "A DraftJS plugin for supporting Markdown syntax shortcuts",
   "main": "lib/index.js",
   "scripts": {
     "eslint": "node_modules/.bin/eslint .",
     "build": "npm run clean && npm run build:js",
     "build:demo": ".circleci/build-demo.sh",
-    "build:js":
-      "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
-    "clean":
-      "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
+    "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
+    "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
     "deploy:demo": ".circleci/deploy-demo.sh",
     "prepublish": "npm run build",
     "start": "npm run start:dev",
     "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
     "test": "npm run test:coverage",
-    "test:coverage":
-      "node_modules/.bin/nyc --require babel-core/register npm run test:mocha",
+    "test:coverage": "node_modules/.bin/nyc --require babel-core/register npm run test:mocha",
     "test:mocha": "mocha --opts .mocha.opts $(find src -name '*-test.js')",
     "test:watch": "npm test | npm run watch",
     "watch": "npm-watch",
@@ -25,21 +22,27 @@
   },
   "watch": {
     "test": {
-      "patterns": ["src/**/*.js"]
+      "patterns": [
+        "src/**/*.js"
+      ]
     }
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ngs/draft-js-markdown-shortcuts-plugin.git"
   },
-  "keywords": ["draftjs", "editor", "plugin", "markdown"],
+  "keywords": [
+    "draftjs",
+    "editor",
+    "plugin",
+    "markdown"
+  ],
   "author": "Atsushi Nagase",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ngs/draft-js-markdown-shortcuts-plugin/issues"
   },
-  "homepage":
-    "https://github.com/ngs/draft-js-markdown-shortcuts-plugin#readme",
+  "homepage": "https://github.com/ngs/draft-js-markdown-shortcuts-plugin#readme",
   "devDependencies": {
     "autoprefixer": "^6.5.3",
     "babel-cli": "^6.18.0",
@@ -99,17 +102,18 @@
     "webpack-hot-middleware": "^2.13.2"
   },
   "peerDependencies": {
-    "draft-js-plugins-editor":
-      "^2.0.0 || ~2.0.0-rc.1 || 2.0.0-rc2 || 2.0.0-rc1 || 2.0.0-beta12",
-    "react": "^16.0.0 || ^15.0.0",
-    "react-dom": "^16.0.0 || ^15.0.0"
+    "draft-js-plugins-editor": "^3.0.0",
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0"
   },
-  "contributors": ["Atsushi Nagase <a@ngs.io>"],
+  "contributors": [
+    "Atsushi Nagase <a@ngs.io>"
+  ],
   "dependencies": {
     "decorate-component-with-props": "^1.1.0",
-    "draft-js": "~0.10.5",
+    "draft-js": "~0.11.0",
     "draft-js-checkable-list-item": "^3.0.1",
-    "immutable": "~3.7.4",
+    "immutable": "~3.8.2",
     "opencollective": "^1.0.3"
   },
   "collective": {
