--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
     "test": "npm run test:coverage",
     "test:coverage": "node_modules/.bin/nyc --require babel-core/register npm run test:mocha",
-    "test:mocha": "mocha --opts .mocha.opts $(find src -name '*-test.js')",
+    "test:mocha": "BABEL_ENV=test mocha",
     "test:watch": "npm test | npm run watch",
     "watch": "npm-watch",
     "postinstall": "opencollective postinstall"
@@ -37,77 +37,77 @@
   },
   "homepage": "https://github.com/ngs/draft-js-markdown-shortcuts-plugin#readme",
   "devDependencies": {
-    "autoprefixer": "^6.5.3",
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.8",
-    "babel-plugin-rewire": "^1.0.0",
-    "babel-polyfill": "^6.16.0",
-    "babel-preset-es2015": "^6.18.0",
-    "babel-preset-react": "^6.16.0",
+    "autoprefixer": "^9.8.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-rewire": "^1.2.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "chai": "^3.5.0",
-    "chai-enzyme": "^1.0.0-beta.0",
+    "babel-preset-stage-0": "^6.24.1",
+    "chai": "^4.2.0",
+    "chai-enzyme": "^1.0.0-beta.1",
     "cheerio": "^0.22.0",
-    "coveralls": "^2.11.15",
-    "css-loader": "^0.26.0",
-    "css-modules-require-hook": "^4.0.5",
-    "dirty-chai": "^1.2.2",
+    "coveralls": "^3.1.0",
+    "css-loader": "^3.5.3",
+    "css-modules-require-hook": "^4.2.3",
+    "dirty-chai": "^2.0.1",
     "draft-js-plugins-editor": "3.0.0",
-    "draft-js-prism": "^1.0.5",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^3.11.1",
-    "eslint-config-airbnb": "^13.0.0",
+    "draft-js-prism": "^1.0.6",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
+    "eslint": "^7.1.0",
+    "eslint-config-airbnb": "^18.1.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-mocha": "^4.7.0",
-    "eslint-plugin-react": "^6.7.1",
-    "express": "^4.14.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "flow-bin": "^0.36.0",
-    "history": "^2.0.0",
-    "jsdom": "^9.8.3",
-    "mocha": "^3.2.0",
-    "mocha-junit-reporter": "^1.12.1",
-    "mocha-multi-reporters": "^1.1.1",
-    "npm-watch": "^0.1.6",
-    "nyc": "^10.0.0",
-    "postcss-loader": "^1.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-mocha": "^7.0.1",
+    "eslint-plugin-react": "^7.20.0",
+    "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^6.0.0",
+    "flow-bin": "^0.125.1",
+    "history": "^4.10.1",
+    "jsdom": "^16.2.2",
+    "mocha": "^7.2.0",
+    "mocha-junit-reporter": "^1.23.3",
+    "mocha-multi-reporters": "^1.1.7",
+    "npm-watch": "^0.6.0",
+    "nyc": "^15.1.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "2.0.5",
-    "prismjs": "^1.6.0",
-    "raf": "^3.4.0",
+    "prismjs": "^1.20.0",
+    "raf": "^3.4.1",
     "react": "^16.2.0",
-    "react-addons-pure-render-mixin": "^15.4.1",
-    "react-addons-test-utils": "^15.4.1",
+    "react-addons-pure-render-mixin": "^15.6.2",
+    "react-addons-test-utils": "^15.6.2",
     "react-dom": "^16.2.0",
-    "react-github-fork-ribbon": "^0.5.1",
-    "rimraf": "^2.5.4",
-    "sinon": "^1.17.6",
-    "sinon-chai": "^2.8.0",
-    "static-site-generator-webpack-plugin": "^3.1.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "~1.13.3",
-    "webpack-dev-middleware": "^1.8.4",
-    "webpack-hot-middleware": "^2.13.2"
+    "react-github-fork-ribbon": "^0.6.0",
+    "rimraf": "^3.0.2",
+    "sinon": "^9.0.2",
+    "sinon-chai": "^3.5.0",
+    "static-site-generator-webpack-plugin": "^3.4.2",
+    "style-loader": "^1.2.1",
+    "url-loader": "^4.1.0",
+    "webpack": "~4.43.0",
+    "webpack-dev-middleware": "^3.7.2",
+    "webpack-hot-middleware": "^2.25.0"
   },
   "peerDependencies": {
     "draft-js-plugins-editor": "^3.0.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "contributors": ["Atsushi Nagase <a@ngs.io>"],
   "dependencies": {
     "decorate-component-with-props": "^1.1.0",
     "draft-js": "~0.11.5",
-    "draft-js-checkable-list-item": "^2.0.5",
-    "draft-js-prism-plugin": "^0.1.1",
-    "immutable": "~3.7.4",
+    "draft-js-checkable-list-item": "^3.0.4",
+    "draft-js-prism-plugin": "^0.1.3",
+    "immutable": "~3.8.2",
     "opencollective": "^1.0.3"
   },
   "collective": {
