--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,9 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": ["@babel/plugin-proposal-class-properties"],
   "env": {
     "development": {
-      "presets": ["react-hmre"]
+      "presets": []
     },
     "test": {
       "plugins": ["rewire"]
