--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "eslint": "node_modules/.bin/eslint .",
     "build": "npm run clean && npm run build:js",
-    "build:demo": "NODE_ENV=production npx webpack --config demo/webpack.config.prod.js && rm -rf demo/public/css && cp -R demo/publicTemplate/* demo/public/",
+    "build:demo": "rm -rf demo/public/* && NODE_ENV=production npx webpack --config demo/webpack.config.prod.js && rm -rf demo/public/{css,index.html} && cp -R demo/publicTemplate/* demo/public/ && sed \"s/app.js/$(basename $(ls demo/public/app.*.js))/g\" demo/publicTemplate/index.html > demo/public/index.html",
     "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
     "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
     "prepare": "npm run build",
@@ -14,7 +14,7 @@
     "start": "npm run start:dev",
     "start:dev": "node_modules/.bin/babel-node ./demo/server.js",
     "test": "npm run test:coverage",
-    "test:coverage": "node_modules/.bin/nyc --require babel-core/register npm run test:mocha",
+    "test:coverage": "node_modules/.bin/nyc --require @babel/register npm run test:mocha",
     "test:mocha": "BABEL_ENV=test mocha",
     "test:watch": "npm test | npm run watch",
     "watch": "npm-watch",
@@ -37,17 +37,19 @@
   },
   "homepage": "https://github.com/ngs/draft-js-markdown-shortcuts-plugin#readme",
   "devDependencies": {
+    "@babel/cli": "^7.10.1",
+    "@babel/core": "^7.10.2",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/polyfill": "^7.10.1",
+    "@babel/preset-env": "^7.10.2",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/preset-stage-0": "^7.8.3",
+    "@babel/register": "^7.10.1",
     "autoprefixer": "^9.8.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "babel-plugin-rewire": "^1.2.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.2.0",
     "chai-enzyme": "^1.0.0-beta.1",
     "cheerio": "^0.22.0",
@@ -66,7 +68,6 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-mocha": "^7.0.1",
     "eslint-plugin-react": "^7.20.0",
-    "express": "^4.17.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^6.0.0",
     "flow-bin": "^0.125.1",
@@ -89,12 +90,11 @@
     "rimraf": "^3.0.2",
     "sinon": "^9.0.2",
     "sinon-chai": "^3.5.0",
-    "static-site-generator-webpack-plugin": "^3.4.2",
     "style-loader": "^1.2.1",
     "url-loader": "^4.1.0",
     "webpack": "~4.43.0",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.11.0"
   },
   "peerDependencies": {
     "draft-js-plugins-editor": "^3.0.0",
