Update test trigger condition

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,8 +1,7 @@
 name: Publish to npm
 on:
-  push:
-    tags:
-    - v[0-9].[0-9]+.[0-9]+
+  release:
+    types: [published]
 jobs:
   publish:
     runs-on: ubuntu-latest
@@ -13,12 +12,14 @@ jobs:
         node-version: 12
     - name: Check tag version
       run: |
+        TAG_NAME=${{ github.event.release.tag_name }}
         VERSION=$(node -e 'console.info(require("./package.json").version)')
-        if [ "refs/tags/v${VERSION}" != $GITHUB_REF ]; then
-          echo "Ref ${GITHUB_REF} not match"
+        if [ "v${VERSION}" != $TAG_NAME ]; then
+          echo "Ref ${TAG_NAME} not match with v${VERSION}"
           exit 1
         fi
     - run: npm install
-    - run: npm publish
-      env:
-        NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+    - name: publish
+      run: |
+        echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}" > ~/.npmrc
+        npm publish
