--- a/package.json
+++ b/package.json
@@ -10,33 +10,24 @@
     "build:js": "BABEL_DISABLE_CACHE=1 BABEL_ENV=production NODE_ENV=production node_modules/.bin/babel --out-dir='lib' --ignore='**/__test__/*' src",
     "clean": "node_modules/.bin/rimraf lib; node_modules/.bin/rimraf demo/public",
     "prepare": "npm run build",
-    "prepublish": "npm run build",
     "start": "npm run start:dev",
     "start:dev": "webpack-dev-server --config demo/webpack.config.dev.js",
     "test": "npm run test:coverage",
     "test:coverage": "node_modules/.bin/nyc --require @babel/register npm run test:mocha",
     "test:mocha": "BABEL_ENV=test mocha",
     "test:watch": "npm test | npm run watch",
-    "watch": "npm-watch",
-    "postinstall": "opencollective postinstall"
+    "watch": "npm-watch"
   },
   "watch": {
     "test": {
-      "patterns": [
-        "src/**/*.js"
-      ]
+      "patterns": ["src/**/*.js"]
     }
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ngs/draft-js-markdown-shortcuts-plugin.git"
   },
-  "keywords": [
-    "draftjs",
-    "editor",
-    "plugin",
-    "markdown"
-  ],
+  "keywords": ["draftjs", "editor", "plugin", "markdown"],
   "author": "Atsushi Nagase",
   "license": "MIT",
   "bugs": {
@@ -109,16 +100,13 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   },
-  "contributors": [
-    "Atsushi Nagase <a@ngs.io>"
-  ],
+  "contributors": ["Atsushi Nagase <a@ngs.io>"],
   "dependencies": {
     "decorate-component-with-props": "^1.1.0",
     "draft-js": "~0.11.5",
     "draft-js-checkable-list-item": "^3.0.4",
     "draft-js-prism-plugin": "^0.1.3",
-    "immutable": "~3.8.2",
-    "opencollective": "^1.0.3"
+    "immutable": "~3.8.2"
   },
   "collective": {
     "type": "opencollective",
